app/assets/stylesheets/style.css
body {
    background: #fff;
    padding:0;
}

.root{
    background:#f5f5f5;
    border: 2px solid #e3e3e3;
    -webkit-border-radius: 20px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
}

div.node {
    background: #eee;
    padding-left: 15px;
    padding-right: 15px;
    margin: 5px;
}

.js-mindmap-active div.node.active {
    padding: 5px 10px !important;
    border-width: 5px !important;
}

.js-mindmap-active div.node.activeparent {
    padding: 5px 10px !important;
    border-width: 5px !important;
    background: #cccccc;
}

.code-field {
    border: none;
    background: none;
}

.syn {
    border-radius: 20px;
    border: 2px solid black;
}

.cat {
    border-radius: 20px;
    border: 3px double blue;
}

.cat-button{
    background: transparent;
    border-style: hidden;
}

.drg {
    border-radius: 20px;
    border: 2px dashed red;
}

.exclusiva {
    border-radius: 20px;
    border: 2px dotted green;
}

.inclusiva {
    border-radius: 20px;
    border: 2px solid orange;
}

.super {
    border: 2px solid gray;
}

.legend {
    margin: 10px;
    padding-left: 10px;
    text-align: center;
}

.doc{
    border-radius: 20px;
    border: 1px dashed darkviolet;
}

#legend {
    width: 200px;
    margin: 10px;
    border: 1px dashed #c5c5c5;
    padding: 10px;
    right: 0;
    position: absolute;
    border-radius: 20px;
    top: 50px;
}

#search-bar {
    position: absolute;
    width: 100%;
    height: 50px;
    background: #f5f5f5;
    border-bottom: 1px solid #c5c5c5;
    top: 0;
    left:0;
}

#code-name{
    width: 200px;
    height: 25px;
    margin-top: 10px;
    margin-left: 15px;
    border-radius: 15px;
    border: 1px solid #cccccc;
    padding-left: 15px;
}

#lang{
    background: transparent;
    width: 125px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    padding: 3px 5px 3px 15px;
    height: 25px;
    -webkit-appearance: none;
}

.hide-arrow{
    margin-top: 10px;
    border: 1px solid #cccccc;
    display: inline;
    position: absolute;
    right:10px;
    background: url(arrow.png) no-repeat right white;
    width: 100px;
    height: 25px;
    overflow: hidden;
    border-radius: 15px;
}

#mindmap{
    position: absolute;
    top:51px;
    height:100%;
    width: 99%;
}

